[package]
name = "luarev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
int-enum = "0.4"
thiserror = "1.0"
anyhow = "1.0"
quote = "1.0"
bitflags = "1.3"
serde = "1.0"
itoa = "1.0"
lazy_static = "1.4"
serde_derive = "1.0"
bytes = "1.1"
num-traits = "0.2"
block-buffer = "0.10"
tokio = "1.15"
num-integer = "0.1"
itertools = "0.10"
clap = "3.0"

